# frisbee

./: .gitignore  .release-it.json  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
scripts/: update-homebrew.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AskDogModal.tsx  DogAnimator.tsx  FormattedContentView.tsx  FrisbeeLauncher.tsx  FullDetailModal.tsx  QueueList.tsx  QuickLauncher.tsx  ReviewQueue.tsx  SettingsModal.tsx  StockArchive.tsx
src/services/: searchAgent.ts  store.ts
src/types/: index.ts
src/utils/: openUrl.ts
